[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "camelot-py>=1.0.0",
    "numpy>=2.2.6",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pdfminer-six>=20250327",
    "pdfplumber>=0.11.6",
    "pymupdf>=1.26.0",
    "python-docx>=1.1.2",
    "tabula-py>=2.10.0",
]
